# AppFlowy

.github/workflows/: flutter_ci.yaml  rust_ci.yaml  trigger_pubilc_ci.yml
frontend/: Makefile.toml
frontend/appflowy_flutter/: pubspec.yaml
frontend/appflowy_flutter/assets/translations/: mr-IN.json
frontend/appflowy_flutter/integration_test/shared/: workspace.dart  (+2 more)
frontend/resources/translations/: el-GR.json  en-GB.json  en-US.json  en.json  id-ID.json  ru-RU.json
frontend/rust-lib/: Cargo.toml
frontend/rust-lib/.cargo/: config.toml
frontend/rust-lib/dart-ffi/: Cargo.toml
frontend/rust-lib/flowy-ai/: Cargo.toml
frontend/rust-lib/flowy-ai-pub/: Cargo.toml
frontend/rust-lib/flowy-core/: Cargo.toml
frontend/rust-lib/flowy-database2/: Cargo.toml
frontend/rust-lib/flowy-document/: Cargo.toml
frontend/rust-lib/flowy-error/: Cargo.toml
frontend/rust-lib/flowy-folder/: Cargo.toml
frontend/rust-lib/flowy-notification/: Cargo.toml
frontend/rust-lib/flowy-server/: Cargo.toml
frontend/rust-lib/flowy-server-pub/: Cargo.toml
frontend/rust-lib/flowy-sqlite/: Cargo.toml
frontend/rust-lib/flowy-user/: Cargo.toml
frontend/rust-lib/flowy-user-pub/: Cargo.toml
frontend/rust-lib/flowy-user-pub/src/: cloud.rs  entities.rs  lib.rs  workspace_service.rs
frontend/rust-lib/flowy-user-pub/src/sql/: user_sql.rs  workspace_sql.rs
frontend/rust-lib/flowy-user-pub/src/workspace_collab/: adaptor.rs  adaptor_trait.rs  mod.rs
frontend/rust-lib/integration-test/: Cargo.toml
frontend/rust-lib/lib-infra/: Cargo.toml
frontend/scripts/makefile/: tests.toml
(+731 files in other folders)
