[package]
name = "flowy-user-pub"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-infra = { workspace = true }
flowy-error = { workspace = true }
uuid.workspace = true
serde.workspace = true
collab = { workspace = true }
collab-entity = { workspace = true }
collab-document = { workspace = true }
collab-user = { workspace = true }
collab-database = { workspace = true }
collab-folder = { workspace = true }
collab-plugins = { workspace = true }
serde_json.workspace = true
serde_repr.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
flowy-folder-pub.workspace = true
tracing.workspace = true
base64 = "0.21"
client-api = { workspace = true, features = ["collab-sync"] }
flowy-sqlite.workspace = true
arc-swap = "1.7"
flowy-ai-pub.workspace = true
anyhow.workspace = true